Add About section styles

--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
             </div>
         </div>
         
-        <div class="container-fluid">
+        <div class="container-fluid bg-2">
             <div class="col-sm-7">
                 <h2>ABOUT COMPANY PAGE</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <button>Get in Touch</button>
+                <button class="btn btn-default btn-lg">Get in Touch</button>
             </div>
-            <div class="col-sm-5">
+            <div class="col-sm-5 text-center">
                 <span class="glyphicon glyphicon-signal" aria-hidden="true"></span>
             </div>
         </div><!-- container-fluid -->
