--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div><!-- container-fluid -->
         
         <div class="container-fluid bg-3">
-            <div class="col-sm-5">
+            <div class="col-sm-5 text-center">
                 <span class="glyphicon glyphicon-globe" aria-hidden="true"></span>
             </div>
             <div class="col-sm-7">
@@ -76,7 +76,7 @@
             </div>
         </div><!-- container-fluid -->
         
-        <div class="container-fluid">
+        <div class="container-fluid bg-4 text-center">
             <h2>Services</h2>
             <h4>What we offer</h4>
             <div class="row">
